kagent/deployments/kagent-bk.yaml
apiVersion: v1
kind: Service
metadata:
  name: kagent
  labels:
    app: kagent
    service: kagent
spec:
  ports:
  - name: http
    port: 8000
    targetPort: 50051
  selector:
    app: kagent
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kagent
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kagent
      version: v1
  template:
    metadata:
      labels:
        app: kagent
        version: v1
    spec:
      serviceAccountName: kagent
      containers:
      - image: docker.io/lw233/kagent
        imagePullPolicy: IfNotPresent
        name: kagent
        ports:
        - containerPort: 50051
